header and body base

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 
     <!--TITLE-->
     <title>portfolio hub showcase</title>
+
+    <!--LINKS-->
+    <!--Font Londrina Sketch-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap" rel="stylesheet">
+
+    <!--Font IBM Plex Sans-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
+    <!--CSS-->
+    <link rel="stylesheet" href="mainCSS.css">
 </head>
 
 <!---------------------------------------------------------------------------------------------------------------------->
@@ -17,8 +31,8 @@
     <!--LOGO HEADER----------------------------------------------------------------------------------------------------->
     <!------------------------------------------------------------------------------------------------------------------>
     <header class="header">
-        <h2 id="title">PORTFOLIO 2025</h2>
-        <h4 id="name">Anastasia Ihnatsenka Shakhova</h4>
+        <h1 id="title">PORTFOLIO 2025</h1>
+        <h2 id="name">Anastasia Ihnatsenka Shakhova</h2>
     </header>
 
     <div class="section" id="section-1">
@@ -27,12 +41,14 @@
                 <img src="">
             </div>
             <div>
-                <h6>Wild Claw Studio</h6>
+                <h3>Wild Claw Studio</h3>
                 <p>Diseño e implementación de la página web para Wild Claw Studio, un estudio ficticio de videojuegos creado en el marco universitario.</p>
                 <p>Mi trabajo se centró en adaptar y personalizar una plantilla base para desarrollar una identidad visual atractiva, orientada a captar la atención de posibles jugadores y transmitir cercanía desde el equipo de desarrollo hacia la comunidad.</p>
                 <p>Links:</p>
-                <p src="">Webpage</p>
-                <p src="">Github</p>
+                <ul>
+                    <li src="">Webpage</li>
+                    <li src="">Github</li>
+                </ul>
             </div>
         </div>
     </div>
