--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
             <a href="mailto:tasiatasart@gmail.com" target="_blank" rel="noopener noreferrer">
-                <svg width="800px" height="800px" viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <svg style="z-index: 10" width="800px" height="800px" viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 
                     <title>email [#1573]</title>
                     <desc>Created with Sketch.</desc>
@@ -238,7 +238,7 @@
             <div class ="description">
                 <h3>Juego Space Combat Rush 3D "SCR3D"</h3>
                 <p>Diseño de interfaces, concept art, modelado/texturizado 3D, y creación de VFX, animación y edición del tráiler.</a></p>
-                <p>En Wild Claw Studio, un equipo creado en la universidad, participé en el rediseño de SCR. Mi rol se centró en el diseño visual y de usabilidad, colaborando con un artista 3D, programadores y un game designer para lograr un juego atractivo y accesible.</p>
+                <p>En Wild Claw Studio, un equipo creado en la universidad, participé en el rediseño de SCR. Mi rol incluyó el diseño visual y de usabilidad, así como la coordinación del equipo de arte, trabajando junto a un artista 3D, programadores y un game designer para crear un juego atractivo y accesible.</p>
                 <p style="font-weight: bold">Links:</p>
                 <ul>
                     <li><a href="https://wild-claw-studio.itch.io/space-combat-rush-3d" target="_blank">Itchio SCR3D</a></li>
@@ -298,9 +298,9 @@
                 </div>
             </div>
             <div class ="description">
-                <h3>Juego The Inner Doors</h3>
+                <h3>Juego Mr Erazer's Revenge</h3>
                 <p>Diseño de interfaces y diseño de fondos y assets de escenario.</a></p>
-                <p>Primer proyecto de Wild Claw Studio, desarrollado para la Game Jam Game Gen 2022. En colaboración con la artista de personajes y el equipo de programación, me encargué de crear el contenido visual y los escenarios que definieran la experiencia del jugador dentro del juego.</p>
+                <p>Primer proyecto de Wild Claw Studio, desarrollado para la Game Jam Game Gen 2022. En colaboración con la artista de personajes y el equipo de programación, me encargué de crear la UI, los escenarios y otros assets varios que definieran la experiencia del jugador dentro del juego.</p>
                 <p style="font-weight: bold">Links:</p>
                 <ul>
                     <li><a href="https://wild-claw-studio.itch.io/mr-erazers-revenge" target="_blank">Itchio Mr Erazer's Revenge</a></li>
