responsiveness corrected a bit

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <!---------------------------------------------------------------------------------------------------------------------->
 <body>
     <!-- VERTICAL LINES BODY -->
+    <div class="line-wrapper"></div>
     <div class="line left one"></div>
     <div class="line left two"></div>
     <div class="line right one"></div>
