--- a/index.html
+++ b/index.html
@@ -440,6 +440,6 @@
             <p>Copyright © Anastasia Ihnatsenka Shakhova 2025</p>
         </div>
     </footer>
-    <div class="warning"> ADVERTENCIA: esta página web no es compatible con dispositivos móviles</div>
+    <div class="warning"> ADVERTENCIA: esta página web se ve mejor a ordenador</div>
 </body>
 </html>
